salesforce/force-app/main/default/objects/Message__c/Message__c.object-meta.xml
<CustomObject>
    <description>A single WhatsApp message (inbound or outbound) within a conversation.</description>
    <label>WhatsApp Message</label>
    <pluralLabel>WhatsApp Messages</pluralLabel>
    <nameField>
        <label>Message Number</label>
        <type>AutoNumber</type>
        <displayFormat>WM-{00000000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>