salesforce/force-app/main/default/objects/Message__c/fields/Heydoot_Message_Id__c.field-meta.xml
<CustomField>
    <fullName>Heydoot_Message_Id__c</fullName>
    <label>heydoot Message Id</label>
    <description>Provider message id from heydoot. Used as the idempotency key for at-least-once webhooks.</description>
    <type>Text</type>
    <length>255</length>
    <externalId>true</externalId>
    <unique>true</unique>
</CustomField>