salesforce/force-app/main/default/objects/Message__c/fields/Media_URL__c.field-meta.xml
<CustomField>
    <fullName>Media_URL__c</fullName>
    <label>Media URL</label>
    <description>URL of any attached media (image/doc/audio) served by heydoot.</description>
    <type>Url</type>
</CustomField>