salesforce/force-app/main/default/objects/Message__c/fields/Sender_Name__c.field-meta.xml
<CustomField>
    <fullName>Sender_Name__c</fullName>
    <label>Sender Name</label>
    <description>Display name of the sender (used for inbound group messages).</description>
    <type>Text</type>
    <length>255</length>
</CustomField>