salesforce/force-app/main/default/objects/Message__c/fields/Sender_Number__c.field-meta.xml
<CustomField>
    <fullName>Sender_Number__c</fullName>
    <label>Sender Number</label>
    <description>WhatsApp number of the individual sender (used for group messages).</description>
    <type>Text</type>
    <length>40</length>
</CustomField>