salesforce/force-app/main/default/objects/Message__c/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <label>Timestamp</label>
    <description>When the message was sent/received per heydoot.</description>
    <type>DateTime</type>
</CustomField>